# VSAMidiSync

./: .gitignore  AXCtrl.c  AXCtrl.h  CMakeLists.txt  MIDI.c  MIDI.h  README.md  Util.c  Util.h  callbacks.c  callbacks.h  conio2.c  conio2.h  main.c  main.h  manifest.xml  resource.h  resource.rc  subtracks.c  subtracks.h  threads.c  threads.h  util.c  util.h  winmain.c
